--- a/src/friday-wheel.html
+++ b/src/friday-wheel.html
@@ -217,26 +217,45 @@
                 ctx.arc(0, 0, radius, index * sliceAngle, (index + 1) * sliceAngle);
                 ctx.lineTo(0, 0);
 
-                // Alternate colors
+                // Alternate colors with better contrast
                 ctx.fillStyle = index % 2 === 0
-                    ? 'rgba(0, 255, 100, 0.2)'
-                    : 'rgba(0, 255, 255, 0.2)';
+                    ? 'rgba(0, 255, 100, 0.3)'
+                    : 'rgba(0, 255, 255, 0.3)';
                 ctx.fill();
 
-                // Draw border
+                // Draw border with thicker line
                 ctx.strokeStyle = index % 2 === 0 ? '#00ff41' : '#00ffff';
-                ctx.lineWidth = 2;
+                ctx.lineWidth = 2.5;
                 ctx.stroke();
 
-                // Draw text
+                // Draw text - larger and more readable
                 ctx.save();
                 ctx.rotate(index * sliceAngle + sliceAngle / 2);
                 ctx.textAlign = 'right';
-                ctx.fillStyle = '#7ec8e3';
-                ctx.font = 'bold 12px "Courier Prime"';
-                ctx.fillText(activity, radius - 30, 5);
+                ctx.fillStyle = '#000000';
+                ctx.font = 'bold 14px "Courier Prime"';
+                ctx.shadowColor = index % 2 === 0 ? '#00ff41' : '#00ffff';
+                ctx.shadowBlur = 3;
+                ctx.shadowOffsetX = 0;
+                ctx.shadowOffsetY = 0;
+                ctx.fillText(activity, radius - 20, 6);
                 ctx.restore();
             });
+
+            // Draw center hub
+            ctx.beginPath();
+            ctx.arc(0, 0, 25, 0, Math.PI * 2);
+            ctx.fillStyle = '#0a0a0a';
+            ctx.fill();
+            ctx.strokeStyle = '#ff0000';
+            ctx.lineWidth = 3;
+            ctx.stroke();
+
+            // Center circle decoration
+            ctx.beginPath();
+            ctx.arc(0, 0, 12, 0, Math.PI * 2);
+            ctx.fillStyle = '#ff0000';
+            ctx.fill();
 
             ctx.restore();
         }
