improve edit_file tool with exact string replacement + fix broken home links

--- a/src/cen-schedule.html
+++ b/src/cen-schedule.html
@@ -290,9 +290,7 @@
     </style>
 </head>
 <body>
-    <nav class="home-link">
-        <a href="../index.html">← BACK TO SPORTELLO ARCHIVES</a>
-    </nav>
+    <a class="home-link" href="../index.html">← HOME</a>
 
     <div class="planner-container">
         <div class="planner-header">
