--- a/src/foot-scratch-game.html
+++ b/src/foot-scratch-game.html
@@ -241,9 +241,7 @@
     </style>
 </head>
 <body>
-    <nav class="home-link">
-        <a href="../index.html">← Back to Bot Sportello's Arcade</a>
-    </nav>
+    <a class="home-link" href="../index.html">← HOME</a>
 
     <div class="game-container">
         <h1>FOOT SCRATCH SIMULATOR</h1>
