--- a/src/pleasantville-crossword.html
+++ b/src/pleasantville-crossword.html
@@ -334,9 +334,7 @@
     </style>
 </head>
 <body>
-    <div class="home-link">
-        <a href="../index.html">← Back to Bot Sportello</a>
-    </div>
+    <a class="home-link" href="../index.html">← HOME</a>
 
     <div class="container">
         <h1>PLEASANTVILLE MINI CROSSWORD</h1>
