--- a/src/hangman.html
+++ b/src/hangman.html
@@ -360,7 +360,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← BACK TO TERMINAL</a>
+    <a class="home-link" href="../index.html">← HOME</a>
 
     <div class="container">
         <h1>HANGMAN</h1>
