--- a/src/pleasantville-crossword.html
+++ b/src/pleasantville-crossword.html
@@ -14,9 +14,10 @@
             background: #0a0a0a;
             color: #a0d8f0;
             margin: 0;
-            padding: 60px 5px 20px 5px;
-            overflow-x: auto;
+            padding: 60px 10px 20px 10px;
+            overflow-x: hidden;
             overflow-y: auto;
+            scroll-behavior: smooth;
         }
 
         @media (min-width: 768px) {
