--- a/src/tarot-reading.html
+++ b/src/tarot-reading.html
@@ -258,8 +258,8 @@
 
     <div class="tarot-container">
         <h1 class="tarot-title">⟡ TAROT READING ⟡</h1>
-        <p class="tarot-subtitle">Three-Card Spread: Past • Present • Future</p>
-        <p class="instruction-text">Tap each card to reveal your reading</p>
+        <p class="tarot-subtitle" style="text-align: center; margin: 0 auto; width: 100%;">Three-Card Spread: Past • Present • Future</p>
+        <p class="instruction-text" style="text-align: center; margin: 0 auto; width: 100%;">Tap each card to reveal your reading</p>
 
         <div class="status-message" id="statusMessage"></div>
 
