--- a/src/tarot-reading.html
+++ b/src/tarot-reading.html
@@ -43,6 +43,18 @@
             font-size: 0.9em;
             margin-bottom: 20px;
             opacity: 0.8;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        
+        .spread-title {
+            color: #00ffff;
+            font-size: 1.3em;
+            text-align: center;
+            margin: 20px auto;
+            text-shadow: 0 0 5px #00ffff;
+            letter-spacing: 1px;
         }
 
         .cards-container {
