--- a/src/tarot-reading.html
+++ b/src/tarot-reading.html
@@ -147,7 +147,7 @@
             border-radius: 8px;
             padding: 20px;
             margin: 20px 0;
-            text-align: left;
+            text-align: center;
             opacity: 0;
             transform: translateY(20px);
             transition: opacity 0.5s, transform 0.5s;
