--- a/src/tarot-reading.html
+++ b/src/tarot-reading.html
@@ -11,6 +11,7 @@
             padding: 80px 20px 20px 20px;
             overflow-x: auto;
             overflow-y: auto;
+            text-align: center;
         }
 
         @media (max-width: 768px) {
