--- a/src/tarot-reading.html
+++ b/src/tarot-reading.html
@@ -126,6 +126,8 @@
             transform: rotateY(180deg);
             flex-direction: column;
             text-align: center;
+            align-items: center;
+            justify-content: center;
         }
 
         .card-name {
