--- a/src/tarot-reading.html
+++ b/src/tarot-reading.html
@@ -184,6 +184,20 @@
             text-align: center;
         }
 
+        .centered-text {
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .centered-section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+
         .shuffle-btn {
             background: #ff0000;
             color: #0a0a0a;
